Cascading Change Log

2.2.0 [unreleased]

  Updated junit to version 4.11.

  Update default Apache Hadoop support to version 1.1.x. End support for 0.20.2.

  Updated c.f.FlowDef to accept classpath elements that allow for pipe assemblies to load additional resources
  from the current context j.l.ClassLoader.

  Updated error messages in c.t.Fields, delegate property initialization to c.f.Flow sub-classes. @fderose

  Removed Hadoop oro dependency from build and test runtime classpaths to stop transient build failures.

  Added ability to pass System level properties into platform level property sets to override defaults during testing.

  Fixed issue where c.t.l.FileTap#getFullIdentifier() was not returning the fully qualified path.

  Added c.t.h.HfsProps to localize optional Hadoop HDFS specific properties, specifically provides properties for
  enabling the combining of small files into larger splits.

  Updated c.t.h.Hfs to allow for smaller files to be combined into fewer splits, thus fewer map tasks. @sjlee

  Updated c.p.SubAssembly to support setting local and step properties via the c.p.ConfigDef.

  Updated c.o.Buffer to allow implementations to disable nulling of non-grouping fields after the arguments iterator
  has completed. This simplifies appending aggregated fields to the incoming tuple stream.

  Updated c.t.Fields to retain relative positions when calling Fields#append.

  Updated c.t.Fields to return appending value when calling Fields#append on Fields.NONE and optimized Fields#subtract
  when subtracting Fields.NONE.

  Added c.f.AssemblyPlanner interface to allow for platform independent generative c.f.Flow planning.

  Fixed issue in local mode where an OOME could cause a cascading set of additional OOMEs making the jvm unstable.

  Updated c.f.s.MemoryCoGroupGate and c.f.l.s.LocalGroupByGate to drain internal collections when pipelining
  tuples downstream in the pipeline.
